remove vss module in alert
